elco-salesforce/retrieved_account_obj/unpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admin_Fatturato_Effettivo__c</fullName>
        <label>Fatturato effettivo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Admin_Last_Refresh__c</fullName>
        <label>Ultimo aggiornamento amministrazione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Admin_Last_Status__c</fullName>
        <label>Esito ultimo refresh amministrazione</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRIF_Company_Id__c</fullName>
        <label>CRIF - Company Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRIF_Correlation_Id__c</fullName>
        <label>CRIF - Correlation Id</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRIF_DnB_Rating__c</fullName>
        <label>CRIF - DnB Rating</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRIF_EBITDA__c</fullName>
        <label>EBITDA (CRIF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRIF_Factoring_Score__c</fullName>
        <label>CRIF - Factoring Score</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRIF_Fatturato_Anno__c</fullName>
        <label>Anno fatturato (CRIF)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRIF_Fatturato__c</fullName>
        <label>Fatturato (CRIF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRIF_Has_Bankruptcy_Notices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CRIF - Presenza Procedure concorsuali</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRIF_Has_Delinquency_Notices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CRIF - Presenza Protesti</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRIF_Has_Negative_Notices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CRIF - Presenza Pregiudizievoli</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRIF_Last_Duration_ms__c</fullName>
        <label>CRIF - Durata (ms)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRIF_Last_Error__c</fullName>
        <label>CRIF - Messaggio errore ultimo callout</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRIF_Last_Http_Status__c</fullName>
        <label>CRIF - HTTP status ultimo callout</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRIF_Last_Raw_JSON__c</fullName>
        <label>CRIF - Raw JSON ultima risposta</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRIF_Last_Refresh__c</fullName>
        <label>CRIF - Ultimo aggiornamento</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRIF_Last_Request_Timestamp__c</fullName>
        <label>CRIF - Request timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRIF_Last_Response_Timestamp__c</fullName>
        <label>CRIF - Response timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRIF_Last_Status__c</fullName>
        <label>CRIF - Esito ultimo refresh</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>NotFound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRIF_Numero_Dipendenti__c</fullName>
        <label>Numero dipendenti (CRIF)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRIF_Real_Estate_Lease_Score__c</fullName>
        <label>CRIF - Real Estate Lease Score</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRIF_Stato_Attivita__c</fullName>
        <label>Stato attivitÃ  (CRIF)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attiva</fullName>
                </value>
                <value>
                    <fullName>Cessata</fullName>
                </value>
                <value>
                    <fullName>Inattiva/Sospesa</fullName>
                </value>
                <value>
                    <fullName>In Liquidazione</fullName>
                </value>
                <value>
                    <fullName>In Procedura (Concorsuale/Insolvenza)</fullName>
                </value>
                <value>
                    <fullName>Sconosciuto/Non disponibile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRIF_VAT_Normalized__c</fullName>
        <label>CRIF - VAT Normalized</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRIF_Valore_Credito__c</fullName>
        <label>Valore del Credito (Fido)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ERP_Customer_Code__c</fullName>
        <label>ERP Customer Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finish_Default__c</fullName>
        <label>Finish Default</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HASL</fullName>
                </value>
                <value>
                    <fullName>HASL Lead Free</fullName>
                </value>
                <value>
                    <fullName>ENIG</fullName>
                </value>
                <value>
                    <fullName>ENEPIG</fullName>
                </value>
                <value>
                    <fullName>OSP</fullName>
                </value>
                <value>
                    <fullName>Immersion Silver</fullName>
                </value>
                <value>
                    <fullName>Immersion Tin</fullName>
                </value>
                <value>
                    <fullName>Hard Gold</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partita_IVA__c</fullName>
        <label>Partita IVA</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prerequisiti_Note__c</fullName>
        <label>Prerequisiti Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Silkscreen_Default__c</fullName>
        <label>Silkscreen Default</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bianco</fullName>
                </value>
                <value>
                    <fullName>Nero</fullName>
                </value>
                <value>
                    <fullName>Giallo</fullName>
                </value>
                <value>
                    <fullName>Nessuno</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solder_Default__c</fullName>
        <label>Solder Default</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Verde</fullName>
                </value>
                <value>
                    <fullName>Nero</fullName>
                </value>
                <value>
                    <fullName>Bianco</fullName>
                </value>
                <value>
                    <fullName>Rosso</fullName>
                </value>
                <value>
                    <fullName>Blu</fullName>
                </value>
                <value>
                    <fullName>Giallo</fullName>
                </value>
                <value>
                    <fullName>Trasparente</fullName>
                </value>
                <value>
                    <fullName>Nessuno</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spessore_Default__c</fullName>
        <label>Spessore Default</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0.4 mm</fullName>
                </value>
                <value>
                    <fullName>0.6 mm</fullName>
                </value>
                <value>
                    <fullName>0.8 mm</fullName>
                </value>
                <value>
                    <fullName>1.0 mm</fullName>
                </value>
                <value>
                    <fullName>1.2 mm</fullName>
                </value>
                <value>
                    <fullName>1.6 mm</fullName>
                </value>
                <value>
                    <fullName>2.0 mm</fullName>
                </value>
                <value>
                    <fullName>2.4 mm</fullName>
                </value>
                <value>
                    <fullName>3.2 mm</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tableau_Customer_Key__c</fullName>
        <label>Chiave filtro Tableau (cliente)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tableau_Last_Data_Refresh__c</fullName>
        <label>Ultimo refresh dati BI</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tolleranze_Default__c</fullName>
        <label>Tolleranze Default</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Stretta</fullName>
                </value>
                <value>
                    <fullName>Da Disegno / Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>